src/wrapper_refcounted/torch_refcounted_api_generated.h

void atg__linalg_check_errors(value info, const char * api_name, int is_matrix);
value atg__linalg_det(value A);
value atg__linalg_det_result(value result, value LU, value pivots, value A);
value atg__linalg_eigh(value A, const char * UPLO, int compute_v);
value atg__linalg_eigh_eigenvalues(value eigenvalues, value eigenvectors, value A, const char * UPLO, int compute_v);
value atg__linalg_eigvals(value self);
value atg__linalg_slogdet(value A);
value atg__linalg_slogdet_sign(value sign, value logabsdet, value LU, value pivots, value A);
value atg__linalg_solve_ex(value A, value B, int left, int check_errors);
value atg__linalg_solve_ex_result(value result, value LU, value pivots, value info, value A, value B, int left, int check_errors);
value atg__linalg_svd(value A, int full_matrices, int compute_uv, value driver);
value atg__linalg_svd_u(value U, value S, value Vh, value A, int full_matrices, int compute_uv, value driver);
value atg__log_softmax(value self, int64_t dim, int half_to_float);
value atg__log_softmax_backward_data(value grad_output, value output, int64_t dim, int input_dtype);
value atg__log_softmax_backward_data_out(value out, value grad_output, value output, int64_t dim, int input_dtype);
value atg__log_softmax_out(value out, value self, int64_t dim, int half_to_float);
value atg__logcumsumexp(value self, int64_t dim);
value atg__logcumsumexp_out(value out, value self, int64_t dim);
value atg__lstm_mps(value input, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
value atg__lstm_mps_out(value out0, value out1, value out2, value out3, value out4, value out5, value input, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
value atg__lu_with_info(value self, int pivot, int check_errors);
value atg__make_dep_token(int options_kind, int options_device);
value atg__make_dual(value primal, value tangent, int64_t level);
value atg__make_dual_copy(value primal, value tangent, int64_t level);
value atg__make_dual_copy_out(value out, value primal, value tangent, int64_t level);
value atg__make_per_channel_quantized_tensor(value self, value scale, value zero_point, int64_t axis);
value atg__make_per_channel_quantized_tensor_out(value out, value self, value scale, value zero_point, int64_t axis);
value atg__make_per_tensor_quantized_tensor(value self, double scale, int64_t zero_point);
value atg__make_per_tensor_quantized_tensor_out(value out, value self, double scale, int64_t zero_point);
value atg__masked_scale(value self, value mask, double scale);
value atg__masked_scale_out(value out, value self, value mask, double scale);
value atg__masked_softmax(value self, value mask, value dim, value mask_type);
value atg__masked_softmax_backward(value grad_output, value output, value mask, value dim);
value atg__masked_softmax_backward_out(value out, value grad_output, value output, value mask, value dim);
value atg__masked_softmax_out(value out, value self, value mask, value dim, value mask_type);
value atg__mixed_dtypes_linear(value input, value weight, value scale, value bias, value activation);
value atg__mkldnn_reshape(value self, value shape);
value atg__mkldnn_reshape_out(value out, value self, value shape);
value atg__mkldnn_transpose(value self, int64_t dim0, int64_t dim1);
value atg__mkldnn_transpose_(value self, int64_t dim0, int64_t dim1);
value atg__mkldnn_transpose_out(value out, value self, int64_t dim0, int64_t dim1);
value atg__mps_convolution(value self, value weight, value bias, value padding, value stride, value dilation, int64_t groups);
value atg__mps_convolution_out(value out, value self, value weight, value bias, value padding, value stride, value dilation, int64_t groups);
value atg__mps_convolution_transpose(value self, value weight, value padding, value output_padding, value stride, value dilation, int64_t groups);
value atg__mps_convolution_transpose_out(value out, value self, value weight, value padding, value output_padding, value stride, value dilation, int64_t groups);
value atg__native_batch_norm_legit(value input, value weight, value bias, value running_mean, value running_var, int training, double momentum, double eps);
value atg__native_batch_norm_legit_functional(value input, value weight, value bias, value running_mean, value running_var, int training, double momentum, double eps);
value atg__native_batch_norm_legit_no_stats(value input, value weight, value bias, int training, double momentum, double eps);
value atg__native_batch_norm_legit_no_stats_out(value out, value save_mean, value save_invstd, value input, value weight, value bias, int training, double momentum, double eps);
value atg__native_batch_norm_legit_no_training(value input, value weight, value bias, value running_mean, value running_var, double momentum, double eps);
value atg__native_batch_norm_legit_no_training_out(value out0, value out1, value out2, value input, value weight, value bias, value running_mean, value running_var, double momentum, double eps);
value atg__native_batch_norm_legit_out(value out, value save_mean, value save_invstd, value input, value weight, value bias, value running_mean, value running_var, int training, double momentum, double eps);
value atg__native_multi_head_attention(value query, value key, value value_, int64_t embed_dim, int64_t num_head, value qkv_weight, value qkv_bias, value proj_weight, value proj_bias, value mask, int need_weights, int average_attn_weights, value mask_type);