src/bindings/torch_bindings_generated0.ml


  let stubs__linalg_check_errors =
    foreign "atg__linalg_check_errors" (gc_tensor @-> string @-> int @-> returning void)
  ;;

  let stubs__linalg_det =
    foreign "atg__linalg_det" (ptr raw_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs__linalg_det_result =
    foreign
      "atg__linalg_det_result"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__linalg_eigh =
    foreign
      "atg__linalg_eigh"
      (ptr raw_tensor @-> gc_tensor @-> string @-> int @-> returning void)
  ;;

  let stubs__linalg_eigh_eigenvalues =
    foreign
      "atg__linalg_eigh_eigenvalues"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> int
       @-> returning void)
  ;;

  let stubs__linalg_eigvals =
    foreign "atg__linalg_eigvals" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__linalg_slogdet =
    foreign "atg__linalg_slogdet" (ptr raw_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs__linalg_slogdet_sign =
    foreign
      "atg__linalg_slogdet_sign"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__linalg_solve_ex =
    foreign
      "atg__linalg_solve_ex"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning void)
  ;;

  let stubs__linalg_solve_ex_result =
    foreign
      "atg__linalg_solve_ex_result"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__linalg_svd =
    foreign
      "atg__linalg_svd"
      (ptr raw_tensor @-> gc_tensor @-> int @-> int @-> string @-> int @-> returning void)
  ;;

  let stubs__linalg_svd_u =
    foreign
      "atg__linalg_svd_u"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> string
       @-> int
       @-> returning void)
  ;;

  let stubs__log_softmax =
    foreign "atg__log_softmax" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__log_softmax_backward_data =
    foreign
      "atg__log_softmax_backward_data"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__log_softmax_backward_data_out =
    foreign
      "atg__log_softmax_backward_data_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__log_softmax_out =
    foreign
      "atg__log_softmax_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__logcumsumexp =
    foreign "atg__logcumsumexp" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__logcumsumexp_out =
    foreign
      "atg__logcumsumexp_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__lstm_mps =
    foreign
      "atg__lstm_mps"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__lstm_mps_out =
    foreign
      "atg__lstm_mps_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__lu_with_info =
    foreign
      "atg__lu_with_info"
      (ptr raw_tensor @-> gc_tensor @-> int @-> int @-> returning void)
  ;;

  let stubs__make_dep_token =
    foreign "atg__make_dep_token" (int @-> int @-> returning raw_tensor)
  ;;

  let stubs__make_dual =
    foreign "atg__make_dual" (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__make_dual_copy =
    foreign
      "atg__make_dual_copy"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__make_dual_copy_out =
    foreign
      "atg__make_dual_copy_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__make_per_channel_quantized_tensor =
    foreign
      "atg__make_per_channel_quantized_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__make_per_channel_quantized_tensor_out =
    foreign
      "atg__make_per_channel_quantized_tensor_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__make_per_tensor_quantized_tensor =
    foreign
      "atg__make_per_tensor_quantized_tensor"
      (gc_tensor @-> double @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__make_per_tensor_quantized_tensor_out =
    foreign
      "atg__make_per_tensor_quantized_tensor_out"
      (gc_tensor @-> gc_tensor @-> double @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__masked_scale =
    foreign
      "atg__masked_scale"
      (gc_tensor @-> gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs__masked_scale_out =
    foreign
      "atg__masked_scale_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs__masked_softmax =
    foreign
      "atg__masked_softmax"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__masked_softmax_backward =
    foreign
      "atg__masked_softmax_backward"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__masked_softmax_backward_out =
    foreign
      "atg__masked_softmax_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__masked_softmax_out =
    foreign
      "atg__masked_softmax_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__mixed_dtypes_linear =
    foreign
      "atg__mixed_dtypes_linear"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__mkldnn_reshape =
    foreign
      "atg__mkldnn_reshape"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__mkldnn_reshape_out =
    foreign
      "atg__mkldnn_reshape_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__mkldnn_transpose =
    foreign
      "atg__mkldnn_transpose"
      (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__mkldnn_transpose_ =
    foreign
      "atg__mkldnn_transpose_"
      (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__mkldnn_transpose_out =
    foreign
      "atg__mkldnn_transpose_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__mps_convolution =
    foreign
      "atg__mps_convolution"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__mps_convolution_out =
    foreign
      "atg__mps_convolution_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__mps_convolution_transpose =
    foreign
      "atg__mps_convolution_transpose"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__mps_convolution_transpose_out =
    foreign
      "atg__mps_convolution_transpose_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__native_batch_norm_legit =
    foreign
      "atg__native_batch_norm_legit"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__native_batch_norm_legit_functional =
    foreign
      "atg__native_batch_norm_legit_functional"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__native_batch_norm_legit_no_stats =
    foreign
      "atg__native_batch_norm_legit_no_stats"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__native_batch_norm_legit_no_stats_out =
    foreign
      "atg__native_batch_norm_legit_no_stats_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__native_batch_norm_legit_no_training =
    foreign
      "atg__native_batch_norm_legit_no_training"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__native_batch_norm_legit_no_training_out =
    foreign
      "atg__native_batch_norm_legit_no_training_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__native_batch_norm_legit_out =
    foreign
      "atg__native_batch_norm_legit_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__native_multi_head_attention =
    foreign
      "atg__native_multi_head_attention"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning void)
  ;;
